Fixed alignments

--- a/src/.ExternalCss/HomePage.module.css
+++ b/src/.ExternalCss/HomePage.module.css
@@ -80,7 +80,7 @@ html {
     padding: 2rem;
     position: relative;
     min-height: 100vh;
-    background-color: #f0f0f0;
+    background-color: #f0f0f0f5;
     display: flex;
     flex-direction: column;
     align-items: center;
